# container-codes

./: Cargo.toml
config/: server.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/containers/: Cargo.toml
crates/containers/src/: docker.rs  lib.rs  lifecycle.rs  network.rs  security.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs  queue.rs  sandbox.rs  storage.rs  worker.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: balancer.rs  health.rs  lib.rs  middleware.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  server.rs  static_files.rs
crates/server/src/handlers/: files.rs  health.rs  mod.rs  static_files.rs  system.rs
crates/server/src/middleware/: request_id.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  database.rs  error.rs  lib.rs  logging.rs  security.rs  types.rs
docs/: api-specification.md  architecture.md  configuration.md  implementation-plan.md
public/: index.html
src/: main.rs
