[workspace]
members = [
    "crates/server",
    "crates/cli", 
    "crates/proxy",
    "crates/containers",
    "crates/jobs",
    "crates/shared"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "compression-br", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
rustls = "0.23"
rustls-acme = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bollard = "0.16"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.25", features = ["tokio-comp"] }
mime_guess = "2.0"
futures = "0.3"
bytes = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true